--- a/app/views/books/_books_table.html.erb
+++ b/app/views/books/_books_table.html.erb
@@ -18,6 +18,10 @@
         </td>
         <td><%= link_to book.title, book_path(book.id) %></td>
         <td><%= book.body %></td>
+        <%= render "favorites/favorites_button", book: book %>
+        <td>
+          <%= render "book_comments/book_comment_count", book: book %>
+        </td>
       </tr>
     <% end %>
   </tbody>
